app/assets/stylesheets/global.css.scss
* {
  margin: 0px;
  padding: 0px;
  font-family: Verdana, sans-serif;
  font-color: #222;
}

#form-header {
    padding-bottom: 10px;
    border-bottom: 2px solid #bbb;

    #sign-in-form, #sign-up-form {
        margin-left: auto;
        margin-right: auto;
        width: 900px;
    }
}

ol {
  margin-left: auto;
  margin-right: auto;

  li {
    list-style: none;
    border-bottom: 1px solid #ccc;
    padding-top: 5px;
    padding-bottom: 5px;

    .longitude, .latitude {
      border-left: 1px solid #ccc;
      padding-left: 15px;
      padding-right: 15px;
      display: none;
    }

    div.vote, div.location, div.time {
      display: inline;
    }

    div.vote {
      span {
        font-size: 16px;
      }

      width: 80px;
    }

    div.time, span {
      font-size: 10px;
      color: #ccc;
    }

    pre {
      font-size: 16px
    }
  }
}

.vote-up, .vote-down {
  cursor: pointer;
  background-image: url('arrow.png');
  background-size: contain;
  background-repeat: no-repeat;
  height: 30px;
  width: 50px;
}

.vote-down {
    -moz-transform: scaleY(-1);
    -o-transform: scaleY(-1);
    -webkit-transform: scaleY(-1);
    transform: scaleY(-1);
    filter: FlipV;
    -ms-filter: "FlipV";
}

.ng-modal-overlay {
  /* A dark translucent div that covers the whole screen */
  position:absolute;
  z-index:9999;
  top:0;
  left:0;
  width:100%;
  height:100%;
  background-color:#000000;
  opacity: 0.8;
}
.ng-modal-dialog {
  /* A centered div above the overlay with a box shadow. */
  z-index:10000;
  position: absolute;
  width: 50%; /* Default */

  /* Center the dialog */
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);

  background-color: #fff;
  box-shadow: 4px 4px 80px #000;
}
.ng-modal-dialog-content {
  padding:10px;
  text-align: left;
}
.ng-modal-close {
  position: absolute;
  top: 3px;
  right: 5px;
  padding: 5px;
  cursor: pointer;
  font-size: 120%;
  display: inline-block;
  font-weight: bold;
  font-family: 'arial', 'sans-serif';
}


/* Fix for Bootstrap 3 with Angular UI Bootstrap */

.modal {
	display: block;
}

/* Custom dialog/modal headers */

.dialog-header-error { background-color: #d2322d; }
.dialog-header-wait { background-color: #428bca; }
.dialog-header-notify { background-color: #eeeeee; }
.dialog-header-confirm { background-color: #333333; }
	.dialog-header-error span, .dialog-header-error h4,
	.dialog-header-wait span, .dialog-header-wait h4,
	.dialog-header-confirm span, .dialog-header-confirm h4 { color: #ffffff; }

/* Ease Display */

.pad { padding: 25px; }

